[package]
name = "anemo-tower"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = [ "Brandon Williams <bwilliamseng@gmail.com>" ]
edition = "2021"

[dependencies]
bytes = "1.2.1"
dashmap = "5.4.0"
futures = "0.3.21"
governor = "0.5.1"
nonzero_ext = "0.3.0"
pin-project-lite = "0.2.9"
tokio = { version = "1.17.0", features = ["sync", "rt", "macros", "io-util"] }
tower = { version = "0.4.12", default-features = false, features = ["full"] }
tracing = "0.1.32"

anemo = { path = "../anemo" }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.21.1", features = ["full"] }
once_cell = "1.15.0"
