[package]
name = "anemo"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = [ "Brandon Williams <bwilliamseng@gmail.com>" ]
description = "a peer-to-peer networking library"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.57"
bincode = "1.3.3"
bytes = { version = "1.1.0", features = ["serde"] }
ed25519 = { version = "1.5.0", features = ["pkcs8", "alloc", "zeroize"] }
futures = "0.3.21"
http = "0.2.8"
matchit = "0.5.0"
pin-project-lite = "0.2.9"
pkcs8 = { version = "0.9.0", features = ["std"] }
quinn = { version = "0.9.3", default-features = false, features = ["runtime-tokio", "tls-rustls", "futures-io"] }
quinn-proto = "^0.9.2"
rand = "0.8.5"
ring = "0.16.7"
rcgen = "0.9.2"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.17.0", features = ["sync", "rt", "macros", "io-util"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.32"
webpki = { version = "0.22.0", features = ["alloc", "std"] }
x509-parser = "0.14.0"
hex = "0.4.3"
tap = "1.0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.17.0", features = ["full", "test-util"] }
