[package]
name = "anemo"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = [ "Brandon Williams <bwilliamseng@gmail.com>" ]
description = "a peer-to-peer networking library"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.57"
bincode = "1.3.3"
bytes = { version = "1.1.0", features = ["serde"] }
ed25519 = { version = "1.5.0", features = ["pkcs8", "alloc", "zeroize"] }
futures = "0.3.21"
http = "1"
matchit = "0.5.0"
pin-project-lite = "0.2.9"
pkcs8 = { version = "0.9.0", features = ["std"] }
quinn = { version = "0.11.2", default-features = false, features = ["runtime-tokio", "rustls", "futures-io"] }
quinn-proto = { version = "0.11.0", default-features = false, features = ["rustls"] }
rand = "0.8.5"
ring = "0.17"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.17.0", features = ["sync", "rt", "macros", "io-util"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tower = { version = "0.4.12", default-features = false, features = ["full"] }
tracing = "0.1.32"
webpki = { version = "0.102", package = "rustls-webpki", features = ["alloc", "std"] }
x509-parser = "0.14.0"
hex = "0.4.3"
tap = "1.0.1"
thiserror = "1.0.24"
socket2 = "0.5.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.17.0", features = ["full", "test-util"] }
